syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "ringClient";

package ringClient;

// The Chat service definition.
service RingClient {
    // obtains a ip address of a server on the ring
    rpc getAnyServer(IPUsed) returns (ServerInfo);
}

message ServerInfo {
    string ipAddress = 1;
}

message IPUsed {
    string ips = 1;
}
